--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt==3.2.0",
     "fastapi>=0.115.13",
+    "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.0",
