--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
 
     app:
         build:
-            context: .
+            context: ./backend/
         ports:
             - "8081:8081"
         depends_on:
